fix alignment of elements, add in top left and right text for timer and highscores, add classes for styling, other misc. changes

--- a/style.css
+++ b/style.css
@@ -1,19 +1,32 @@
 /*begin css base styling */
 
-main {
+  main {
     margin: 3rem auto;
     max-width: 85vw;
     width: 55ch;
     display: block;
+    text-align: center;
 }
 
-body {
-    margin: 1;
-  }
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.place {
+  text-align: center;
+  margin: 2rem auto;
+  max-width: 100vw;
+  width: 60ch;
+}
 
   h1 {
     font-size: 1.85em;
     margin: 0.70em 0;
+  }
+
+  h4 {
+    justify-content: center;
   }
 
   hr {
@@ -62,15 +75,32 @@ body {
   }
 
   .btn.btn-info {
-    background-color: #1bbc9b;
+    background-color: rgb(95, 0, 139);
     color: #ffffff;
   }
   
   .btn.btn-info:hover {
-    background-color: #31e1bd;
+    background-color: #9124e4;
+  }
+
+  .cent {
+    text-align: center;
   }
 
   /* end button styling */
+
+  .hs {
+    color:rgb(95, 0, 139);
+    padding-left: 25px; 
+  }
+
+  .time {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    padding-right: 40px;
+  }
 
   progress {
     vertical-align: baseline;
